--- a/src/app/appmonitoramento/appmonitoramento.component.html
+++ b/src/app/appmonitoramento/appmonitoramento.component.html
@@ -51,7 +51,7 @@
       <div class="ui-g-12">
         <form autocomplete="off" (ngSubmit)="pesquisar()">
           <div class="ui-g-12 ui-fluid">
-            <label style="display: block">Pesquisar Material: </label>
+            <label style="display: block">Pesquisar Monitoramento: </label>
             <input type="text" pInputText name="nmmaterial" [(ngModel)]="filtro.nmMaterial">
           </div>
         </form>
