--- a/src/app/cadniveldeavaliacao/cadniveldeavaliacao.component.html
+++ b/src/app/cadniveldeavaliacao/cadniveldeavaliacao.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="ui-g-12 ui-fluid">
           <label style="display: block">Código: </label>
-          <input type="text" name="cdNivelDeAvaliacao" pInputText style="width: 50px"  [(ngModel)]="cadnivelavaliacaoSalvar.cdNivelDeAvaliacao" />
+          <input type="text" [readonly]="true" name="cdNivelDeAvaliacao" pInputText style="width: 50px"  [(ngModel)]="cadnivelavaliacaoSalvar.cdNivelDeAvaliacao" />
         </div>
         <div class="ui-g-10 ui-fluid">
           <label style="display: block">Categoria de Avaliação: </label>
