--- a/src/app/cadtipodemetodo/cadtipodemetodo.component.html
+++ b/src/app/cadtipodemetodo/cadtipodemetodo.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="ui-g-12 ui-fluid">
           <label style="display: block">Código: </label>
-          <input type="text" name="codigo" pInputText style="width: 50px"
+          <input type="text" [readonly]="true" name="codigo" pInputText style="width: 50px"
             [(ngModel)]="tipodemetodoSalvar.cdTipoDeMetodo" />
         </div>
         <div class="ui-g-3 ui-fluid">
