--- a/src/app/cadtipodeverificador/cadtipodeverificador.component.html
+++ b/src/app/cadtipodeverificador/cadtipodeverificador.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="ui-g-12 ui-fluid">
           <label style="display: block">Código: </label>
-          <input type="text" name="cdTipoVerificador" pInputText style="width: 50px" [(ngModel)]="tipodeverificadoraSalvar.cdTipoDeVerificador"/>
+          <input type="text" [readonly]="true" name="cdTipoVerificador" pInputText style="width: 50px" [(ngModel)]="tipodeverificadoraSalvar.cdTipoDeVerificador"/>
         </div>
         <div class="ui-g-12 ui-fluid">
           <label style="display: block">Tipo de Verificador: </label>
