--- a/src/app/cadempresa/cadempresa.component.html
+++ b/src/app/cadempresa/cadempresa.component.html
@@ -7,7 +7,7 @@
           </div>
           <div class="ui-g-12 ui-fluid">
               <label style="display: block">Código: </label>
-              <input type="text" name="codigo" pInputText style="width: 50px" [(ngModel)]="empresasSalvar.cdEmpresa" />
+              <input type="text" name="codigo" [readonly]="true" pInputText style="width: 50px" [(ngModel)]="empresasSalvar.cdEmpresa" />
           </div>
           <div class="ui-g-7 ui-fluid">
               <label style="display: block">Nome da Empresa: </label>
