--- a/src/app/appavaliacao/appavaliacao.component.html
+++ b/src/app/appavaliacao/appavaliacao.component.html
@@ -3,6 +3,10 @@
 
     <form #f="ngForm" autocomplete="off" (ngSubmit)="salvar(f)">
       <div class="ui-g">
+
+          <div class="ui-g-12">
+              <h2>Avaliação {{ editando ? ' - Editando - ' : '' }}</h2>
+            </div>
         <div class="ui-g-4">
           <label style="display: block">Monitoramento: </label>
           <p-dropdown [options]="appmonitoramento" name="appmonitoramento" placeholder="Selecione"
@@ -12,8 +16,9 @@
         <div class="ui-g-8 ">
           <br />
           <button type="button" style="width: 200px" (click)="pesquisarMon()" 
-          pButton label="Escolher Monitoramento" type="submit"></button>
+          pButton label="Escolher Monitoramento" ></button>
         </div>
+       
 
         <div class="ui-g-1 ui-fluid">
 
@@ -27,27 +32,40 @@
           </div>
         <div class="ui-g-6 ui-fluid">
           <label style="display: block">Avaliação: </label>
-          <input type="text" name="nmAvaliacao" [(ngModel)]="appavaliacaoSalvar.nmAvalacao" pInputText />
+          <input type="text" name="nmAvaliacao" [(ngModel)]="appavaliacaoSalvar.nmAvaliacao" pInputText />
         </div>
         <div class="ui-g-2 ui-fluid">
           <label style="display: block">Data Início </label>
-          <p-calendar [(ngModel)]="date3" name="dtInicio" [(ngModel)]="appavaliacaoSalvar.dtInicio"
+          <p-calendar name="dtInicio" [(ngModel)]="appavaliacaoSalvar.dtInicio"
             dateFormat="dd.mm.yy" [showIcon]="true"></p-calendar>
         </div>
         <div class="ui-g-2 ui-fluid">
           <label style="display: block">Data Fim </label>
-          <p-calendar [(ngModel)]="date3" name="dtFim" [(ngModel)]="appavaliacaoSalvar.dtFim" dateFormat="dd.mm.yy"
+          <p-calendar name="dtFim" [(ngModel)]="appavaliacaoSalvar.dtFim" dateFormat="dd.mm.yy"
             [showIcon]="true"></p-calendar>
         </div>
-
-        <div class="ui-g-10 ui-fluid">
-        </div>
+        <div class="ui-g-3 ui-fluid">
+            <label>Empresa</label>
+            <!--<p-dropdown name="empresa" [options]="empresas" [autoWidth]="false"  [(ngModel)]="amostragemSalvar.cdEmpresa.cdEmpresa" required></p-dropdown>-->
+  
+            <p-selectButton name="empresa" [options]="empresas" [(ngModel)]="appavaliacaoSalvar.cdEmpresa.cdEmpresa">
+            </p-selectButton>
+        </div>   
+        
+        
+                
         <div class="ui-g-2 ui-fluid">
           <br>
           <button pButton type="submit" label="Salvar" class="ui-button-raised ui-button-success"
             [disabled]="!appavaliacaoSalvar.nmAvaliacao"></button>
 
         </div>
+        <div *ngIf="editando" class="ui-g-2 ui-fluid ">
+            <br />
+            <h3><strong><a routerLink="/appavaliacao">Sair da edição</a></strong></h3>
+  
+          </div>
+        
 
       </div>
 
@@ -77,9 +95,9 @@
               <!--<th style="text-align: left">{{material.nmMaterial}}</th>-->
               <th>
                 <a pButton icon="pi pi-pencil" pTooltip="Editar Material" tooltipPosition="top"
-                  [routerLink]="['/appmonitoramento', appmonitoramento.cdMonitoramento]"></a>
-                <button pButton icon="pi pi-trash" style="margin-left: 10px" pTooltip="Excluir Monitoramento"
-                  tooltipPosition="top" (click)="confirmarExclusao(appmonitoramento)"></button>
+                  [routerLink]="['/appavaliacao', appavaliacao.cdAvaliacao]"></a>
+                <button pButton icon="pi pi-trash" style="margin-left: 10px" pTooltip="Excluir Avaliação"
+                  tooltipPosition="top" (click)="confirmarExclusao(appavaliacao)"></button>
               </th>
             </tr>
           </ng-template>
