--- a/src/app/modverificadoresdomodelo/modverificadoresdomodelo.component.html
+++ b/src/app/modverificadoresdomodelo/modverificadoresdomodelo.component.html
@@ -1,3 +1,20 @@
-<p>
-  modverificadoresdomodelo works!
-</p>
+<div class="container">
+  <p-card  [style]="{width: 'px'}" styleClass="ui-card-shadow">
+    <form #f="ngForm" autocomplete="off" (ngSubmit)="salvar(f)">
+    <div class="ui-g">
+        <div class="ui-g-12">
+          <h2>Verificadores por Modelo</h2>
+        </div>
+
+        <div class="ui-g-4 ui-fluid">
+          <label style="display: block">Escolha um modelo de Monitoramento: </label>
+          <p-dropdown [options]="MonitoramentoTemplate" name="MonitoramentoTemplate" placeholder="Selecione" [style]="{'width':'370px'}"></p-dropdown>
+        </div>
+
+
+    </div>
+    </form>
+
+
+  </p-card>
+</div>
