--- a/src/app/modverificadoresdomodelo/modverificadoresdomodelo.component.html
+++ b/src/app/modverificadoresdomodelo/modverificadoresdomodelo.component.html
@@ -8,8 +8,10 @@
 
         <div class="ui-g-4 ui-fluid">
           <label style="display: block">Escolha um modelo de Monitoramento: </label>
-          <p-dropdown [options]="MonitoramentoTemplate" name="MonitoramentoTemplate" placeholder="Selecione" [style]="{'width':'370px'}"></p-dropdown>
+          <p-dropdown [options]="MonitoramentoTemplate" name="MonitoramentoTemplate" [(ngModel)]="cdMonitoramento" placeholder="Selecione" [style]="{'width':'370px'}"></p-dropdown>
         </div>
+
+        
 
 
     </div>
