verificadores do monitoramento ainda nao bom

--- a/src/app/modverificadoresdomodelo/modverificadoresdomodelo.component.html
+++ b/src/app/modverificadoresdomodelo/modverificadoresdomodelo.component.html
@@ -59,9 +59,9 @@
 
         </tr>
       </ng-template>
-      <ng-template pTemplate="body" let-verificadormodelo>
+      <ng-template pTemplate="body" let-vermodelo>
         <tr>
-          <th>{{verificadormodelo.cdEmpresa}}</th>
+          <th>{{vermodelo.cdVeriMod}}</th>
 
 
         </tr>
